add images to marker

--- a/client/src/components/PersonalArea/Map/Map.css
+++ b/client/src/components/PersonalArea/Map/Map.css
@@ -11,3 +11,12 @@
     outline: none;
     text-overflow: ellipses;
 }
+
+.images-wrapper {
+    display: flex;
+}
+
+.images-wrapper img {
+    max-height: 50px;
+    border: 1px solid #ffffff;
+}
